<resources>
    <string name="app_name">KeepGoing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>

    <string name="section_demo">Demo</string>

    <string name="open_challenges">Open challenges</string>
    <string name="finished_challenges">Finished challenges</string>
    <string name="distance_km">%1$s km</string>
    <string name="percentage_completed">%1$s%% completed</string>
    <string name="km_and_percentage_completed">%1$s km completed (%2$s%%)</string>
    <string name="hours_of_running">%1$s hours of running</string>
    <string name="all_activities">All activities</string>
    <string name="no_activities">No activities yet</string>
    <string name="new_activity">New activity</string>
    <string name="no_finished_challenges">No finished challenges yet</string>
    <string name="no_open_challenges">You have finished all challenges, congratulations!</string>
    <string name="discarded_empty_recording">Discarded empty recording</string>
    <string name="added_activity_success">Successfully recorded activity</string>
    <string name="added_activity_error">Error while storing activity</string>
    <string name="recording_new_activity">Recording new activity</string>

    <string name="challenge_finished">Challenge finished</string>
    <string name="challenge_finished_message">Congratulations, you have finished this challenge!</string>

    <string name="duration">Duration</string>
    <string name="distance_in_km">Distance (km)</string>
    <string name="avg_speed_in_kmh">Avg. Speed (km/h)</string>
    <string name="x_km_in_y_hours">%1$s km in %2$s hours</string>

    <string name="gps_disabled_prompt">GPS is disabled. Enable it?</string>
    <string name="enable_gps">Enable</string>

    <string name="settings">Settings</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="about_msg">
        This app was developed as part of the Android Challenge: one app every month for one year
        (think of it as a New Year\'s resolution). KeepGoing is our project for July.&lt;br/&gt;
        &lt;br/&gt;
        If you want to know more, be sure to check out our &lt;a href=&quot;http://faudroids.org&quot;&gt;website&lt;/a&gt;.
        This app is &lt;b&gt;open source&lt;/b&gt; and you can find everything on &lt;a href=&quot;https://github.com/FauDroids/KeepGoing&quot;&gt;GitHub&lt;/a&gt;.&lt;br/&gt;
        &lt;br/&gt;
        We would love to hear from you! Send us an &lt;a href=&quot;mailto:ideas@faudroids.org&quot;&gt;email&lt;/a&gt; and let us know what you think!&lt;br/&gt;
        &lt;br/&gt;
        Happy coding!
    </string>
    <string name="credits">Credits</string>
    <string name="credits_msg">
        This app is being powered by a number of small and large &lt;b&gt;open source projects&lt;/b&gt;,
        which all together have made this project happen. We couldn\'t have done this without them.
        To those fellow developers out there spending their part time creating those libraries:
        you guys are awesome, keep on rocking!&lt;br&gt;
        &lt;br&gt;
        The libraries in use are:&lt;br&gt;
        &lt;br&gt;
        &lt;a href=&quot;https://github.com/JakeWharton/timber&quot;&gt;Timber&lt;/a&gt; by Jake Wharton&lt;br&gt;
        &lt;a href=&quot;https://github.com/roboguice/roboguice&quot;&gt;RoboGuice&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;https://github.com/mikepenz/MaterialDrawer&quot;&gt;MaterialDrawer&lt;/a&gt; by Mike Penz&lt;br&gt;
        &lt;a href=&quot;https://github.com/square/retrofit&quot;&gt;Retrofit&lt;/a&gt; by Square&lt;br&gt;
        &lt;a href=&quot;https://github.com/square/picasso&quot;&gt;Picasso&lt;/a&gt; by Square&lt;br&gt;
        &lt;a href=&quot;https://github.com/ReactiveX/RxJava&quot;&gt;RxJava&lt;/a&gt; by Reactivex&lt;br&gt;
        &lt;a href=&quot;https://github.com/ReactiveX/RxAndroid&quot;&gt;RxAndroid&lt;/a&gt; by Reactivex&lt;br&gt;
        &lt;a href=&quot;https://github.com/futuresimple/android-floating-action-button&quot;&gt;Floating Action Button&lt;/a&gt; by futuresimple&lt;br&gt;
        &lt;a href=&quot;https://github.com/Raizlabs/DBFlow&quot;&gt;DBFlow&lt;/a&gt; by Raizlabs&lt;br&gt;
        &lt;a href=&quot;https://github.com/lsjwzh/MaterialLoadingProgressBar&quot;&gt;MaterialLoadingProgressBar&lt;/a&gt; by Isjwzh&lt;br&gt;
        &lt;a href=&quot;https://fabric.io&quot;&gt;Crashlytics&lt;/a&gt; by Twitter&lt;br&gt;
        &lt;a href=&quot;https://github.com/google/material-design-icons&quot;&gt;Material Design Icons&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://source.android.com/&quot;&gt;Android Open Source Project&lt;/a&gt; by Google Inc. and the Open Handset Alliance&lt;br&gt;
        &lt;br&gt;
        In addition this app uses a number of very beautiful images provided by professional and part time photographers.
        A big thanks to you!&lt;br&gt;
        &lt;br&gt;
        &lt;a href=&quot;https://pixabay.com/en/great-wall-of-china-china-asia-728872/&quot;&gt;Great Wall of China&lt;/a&gt;
        by Dirk Over, CC0 Public Domain&lt;br&gt;
        &lt;a href=&quot;https://www.flickr.com/photos/gchow7/2652103642/in/photolist-53mJ1S-kbHPQt-k4MPe-q8cvpv-3hTZXH-5EWhRN-fCFXDL-3uNctW-8s4G5X-2JE1HS-3xGBC9-53mKSy-pgiCGQ-pG4gPF-73XtM8-eRh2DX-pwiEWL-pyifAf-pyTq4i-cJcSnf-6hkJWJ-6hkJZw-prY2Z1-AtiPD-pF2sTt-eM8L2U-oRVeCt-dwdMbn-pgmEpj-2StwCn-pvNNsq-pUe2mP-pDXL9w-3eKkXb-pbnQ5v-om6DFQ-pJi5Ru-9fgxzF-9fgwE8-pxyZ3e-pica3F-3b52GR-e7UV2E-pJ4LjX-pcff4d-83GDyL-pinHK9-6FZCEb-e7tFRg-pQTnzV&quot;&gt;Hong Kong&lt;/a&gt;
        by Gary, CC BY-SA 2.0&lt;br&gt;
        &lt;a href=&quot;https://www.flickr.com/photos/mrhayata/4102835233/in/photolist-7fy6Yv-6gAn2o-7cxP9b-5PcmAt-euQZcs-5DPkJP-pFy2hQ-q4q7M8-cjRTPN-p6AchC-ekVUFP-9HdnXd-3i366K-dp7emJ-nsg8TD-dQq3Mi-dTswjL-2gjVUS-b8NxX8-d8uvbS-6eTczu-f1gwix-4kuXZF-hpXEzL-9BKmLb-3ioCbP-dPF6yE-egLw1h-8LXAZN-4nQfdc-axwC49-oHZHZ6-nE3os5-aFLxVZ-8Hji8f-kjkAAR-55HU3J-aFHRHv-nWwHNx-nXEHDm-ayLWVj-drSUdy-dmiPBh-c9uNt1-ueg5g3-aFP5Y6-aFLFHD-arckUx-oyiBWn-6A8SDn&quot;&gt;Bench in park&lt;/a&gt;
        by mrhayata, CC BY-SA 2.0&lt;br&gt;
        &lt;a href=&quot;https://www.flickr.com/photos/hisgett/15542198496/&quot;&gt;Route 66&lt;/a&gt;
        by Tony Hisgett, CC BY 2.0&lt;br&gt;
        &lt;a href=&quot;https://de.wikipedia.org/wiki/Seidenstra%C3%9Fe#/media/File:Silk_Road_1992.jpg&quot;&gt;Silk Road&lt;/a&gt;
        CC BY 2.0&lt;br&gt;
        &lt;a href=&quot;https://www.flickr.com/photos/sbardella/6320287702/in/photolist-aCv8kC-a25a8Q-a259qy-qGbzpd-8M7nzj-8M7nds-7hoCNB-buvopL-eH1ya7-9MGWtz-cvJfoS-a7r3Av-b6Nehc-9MKMMU-3tdMmq-eGUqZp-NynS-gYkMnK-8hgwei-iMeFLr-Nyqj-eGUtbD-Nyig-57kPy7-57kMMj-57gemc-57gEN6-57kE6s-57kT6U-otTj4B-NykB-eGUsBZ-8eG3P7-eGUtLg-9xwiiJ-8eCLb6-eH1yL7-6m1NUq-57kGby-eGUrJz-7fgj9U-7fcoDx-cvJffy-eGUsKB-7fggMh-9xwhy3-7fctVK-7fgdh5-7fghTj-7fcjwp&quot;&gt;Via Appia&lt;/a&gt;
        by Luca Sbardella, CC BY 2.0&lt;br&gt;
        &lt;a href=&quot;https://www.flickr.com/photos/lolo/4898415698/in/photolist-8sREk5-fShwBE-dbGRW1-EhF28-dbG7De-EhEXg-eahZHq-dewQSY-EhEFe-28PJmL-EhzXz-94fWGf-5WXHbU-94g3kw-28PJjC-EhCYQ-EhzDA-EhwZn-bPNGUX-Ehyqk-28PJiQ-4H6rYj-4ERmuc-4ERkjZ-amwPvp-ojf9oW-9KmW4c-dyUzzu-9p1kN-9oyzzE-d6q8JU-67eYsP-9oyGEo-pa6BiK-5WTCFZ-8sNBrM-fShGQP-665Gf4-6qivqc-67eYYz-9ovvpn-w3Loa1-a7MweQ-4EVvzu-9ovPVr-6dkz1U-ii2SVR-8NfTdY-4khwkw-atYAhg&quot;&gt;Great Ocean Road&lt;/a&gt;
        by LeeAnne Adams, CC BY 2.0&lt;br&gt;
        &lt;a href=&quot;https://www.flickr.com/photos/bouldair/5353826343/in/photolist-9a6L3K-91wirV-5wVEJB-5AXnyk-5B2DbY-5x14tE-91wg4D-9a8SE1-9a5Qz4-9a3sy4-99QTtT-99zUna-99Buct-9a8WKf-kcakY-99CY4J-9a8UP3-9a6Cys-9a5RxM-99D5YA-9a8TAb-99zRke-99D4c5-99D6zs-99CUtJ-99D5bf-99APUV-99zPvx-99zSpx-99BwpB-99D1ZL-99D7Ws-99zMSV-99zKD8-99D7sQ-99zKii-99zNsP-w4YbC-7Xg2L-aEBaZB-7Xg4V-7XfGz-7XmLP-7M3dS-5w34o5-9a91NL-54oAd-7RpAb-7RpAY-7XfMN&quot;&gt;Annapurna Circuit&lt;/a&gt;
        by Andrew Hyde, CC BY 2.0&lt;br&gt;
        &lt;br&gt;
        Thanks everyone!
    </string>
    <string name="logout">Logout</string>
    <string name="settings_quick_message">Made by a small team of night time coders in Erlangen, Germany\nThanks for your support!</string>

    <string name="feedback">Feedback</string>
    <string name="feedback_mail_chooser">Thanks for the feedback!</string>
    <string name="feedback_mail_address">ideas@faudroids.org</string>
    <string name="feedback_mail_subject">Feedback TODO</string>
</resources>
