<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/gray_light"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SettingsTextEntry"
                android:text="@string/version"
                android:clickable="false"
                />

            <TextView
                android:id="@+id/versionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsTextEntry"
                android:clickable="false"
                />


        </LinearLayout>

        <include layout="@layout/divider"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/authorTextView"
            android:text="@string/about"
            style="@style/SettingsTextEntry"
            />

        <include layout="@layout/divider"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/creditsTextView"
            android:text="@string/credits"
            style="@style/SettingsTextEntry"
            />

        <include layout="@layout/divider"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/logoutTextView"
            android:text="@string/logout"
            style="@style/SettingsTextEntry"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart_small"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/settings_quick_message"
            android:textSize="10sp"
            android:textColor="@color/gray_dark"
            />

    </LinearLayout>

</RelativeLayout>